2008-05-04  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoNotDestroyStackTraceRule.cs: Adapt to SEH* changes.
	* ISEHCatchBlock.cs, ISEHGuardedBlock.cs, ISEHHandlerBlock.cs: 
	Removed interfaces.
	* Makefile.am: Remove unneeded/removed files.

2008-05-04  Sebastien Pouliot  <sebastien@ximian.com>

	* MissingExceptionConstructorsRule.cs: Refactor to reduce complexity
	and size of the CheckType method (self-test).

2008-05-02  Sebastien Pouliot  <sebastien@ximian.com>

	* DoNotDestroyStackTraceRule.cs: Refactor to avoid 2 defects (long 
	and complex methods) in self-test. Smaller IL size for GetVarIndex.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* MissingExceptionConstructorsRule.cs: New. Check if every exception
	type provides the basic four consructors.
	* Makefile.am: Add rule and tests to the build.

2008-04-26  Sebastien Pouliot  <sebastien@ximian.com>

	* ExceptionShouldBeVisibleRule.cs: New. Check that exception 
	inheriting from base exception types are visible.
	* Makefile.am: Add rule and tests to the build.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidArgumentExceptionDefaultConstructorRule.cs: New. Rule to 
	check if exception derived from ArgumentException are created with 
	some useful information (i.e. not the default constructor).
	* Gendarme.Rules.Exceptions.mdp: Add rule to MD project file.
	* Makefile.am: Add rule and tests to the build.

2008-04-06  Sebastien Pouliot  <sebastien@ximian.com>

	* DontDestroyStackTraceRule.cs: Rename to DoNotDestroyStackTraceRule.
	Rename ExecutionPath to *Collection.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* DontSwallowErrorsCatchingNonspecificExceptionsRule.cs: Rename
	parameter to match interface parameter name.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoNotDestroyStackTraceRule.cs: (renamed from DontDestroyStackTrace.cs)
	* DontSwallowErrorsCatchingNonspecificExceptionsRule.cs:
		Updated rules wrt framework changes.